# logup

./: .gitignore  CMakeLists.txt  Makefile  README.md  bench  bench.cpp  test  test.d
include/: goldilocks_quadratic_ext.h  header  ligero.h  logup.h  merkle.h  mle.h  mle_sumcheck.h  product_sumcheck.h  timer.h  util.h
src/: goldilocks_quadratic_ext.cpp  ligero.cpp  logup.cpp  merkle.cpp  mle.cpp  mle_sumcheck.cpp  product_sumcheck.cpp  util.cpp
